--- a/gossip_sinatra/Gemfile
+++ b/gossip_sinatra/Gemfile
@@ -1,11 +1,6 @@
 source "https://rubygems.org"
 ruby '2.7.4'
-
-gem 'rspec'
-gem 'pry'
-gem 'dotenv'
-gem 'nokogiri'
-gem 'rubocop', '~> 0.57.2'
+gem 'rubocop'
 gem 'sinatra'
 gem 'shotgun'
 gem 'csv'
